# lime

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  default.nix  docker.nix  rust-toolchain.toml  shell.nix
.github/workflows/: rust.yml
migrations/2021-05-13-001536_links/: up.sql
nix/: rust.nix
src/: main.rs  structure.rs
src/db/: mod.rs  models.rs  schema.rs
src/routes/: api.rs  mod.rs  ui.rs
templates/: index.html  text.html
